<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="@color/feedemOrange"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnUrlDebug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@color/button_debug_color"
            android:contentDescription="@string/Hi"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/debug_icon"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLogin2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="90dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/outline_back"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llLogin">

        <ImageView
            android:id="@+id/ivXenLogo"
            android:layout_width="250dp"
            android:layout_height="120dp"
            android:layout_margin="15dp"
            android:contentDescription="@string/xen4logo"
            android:src="@drawable/freedem_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            app:shapeAppearance="@style/Rounded"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/gray"
            android:hint="@string/username"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            android:layout_marginStart="20dp"
            app:shapeAppearance="@style/Rounded"
            app:endIconTint="@color/gray"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            android:textColorHint="@color/gray"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="240dp"
            android:layout_height="64dp"
            android:layout_margin="13dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/button_back_color"
            android:text="@string/login"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/tvForgotPassword"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/button_back_color"
            android:elevation="0dp"
            android:shadowColor="@color/white"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="#5C5C5C"
            android:textSize="12sp"
            android:textStyle="normal" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clDebug"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llLogin">

        <TextView
            android:id="@+id/tvUrlDebug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/url_https_xen4_uat_azurewebsites_net"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tipBase"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            android:layout_margin="15dp"
            app:shapeAppearance="@style/Rounded"
            android:textColorHint="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUrlDebug"
            android:layout_marginBottom="10dp"
            android:hint="Base Url: "
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etBase"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnConfirmUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:backgroundTint="@color/feedemBlue"
            android:text="Save"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tipBase" />

        <Button
            android:id="@+id/btnCloseDebug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:backgroundTint="@color/feedemOrange"
            android:text="Close"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/btnConfirmUrl"
            app:layout_constraintTop_toBottomOf="@+id/tipBase" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:backgroundTint="@color/black"
            android:text="Clear"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tipBase" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBaseUrls"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCloseDebug"
            tools:listitem="@layout/base_url_back" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSplash"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="270dp"
            android:layout_height="135dp"
            android:layout_marginBottom="70dp"
            android:src="@drawable/freedem_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/white"
            android:foregroundTint="@color/white"
            android:indeterminate="true"
            android:indeterminateTint="@color/white"
            android:progressTint="@color/gray"
            app:indicatorColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:trackCornerRadius="20dp"
            app:trackThickness="5dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>